--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ h3 {
 				<p>A short sequence of frames. This is analogous to the 1.5s video chunks used in
 				<a href="https://arxiv.org/abs/1904.01766">VideoBERT</a>. We split each session
 				into non-overlapping 10-frame events, sampled at 5 frames-per-second, for 2-second events.</p>
-				<div class="animation">
+				<!--<div class="animation">
 					<img class="a 0" src="images/0.png">
 					<img class="a 1" src="images/1.png">
 					<img class="a 2" src="images/2.png">
@@ -113,7 +113,7 @@ h3 {
 					<img class="a 7" src="images/7.png">
 					<img class="a 8" src="images/8.png">
 					<img class="a 9" src="images/9.png">
-				</div>
+				</div>-->
 			</div>
 		</div>
 		<div class="panel panel-default">
