--- a/4b7835b90d570bbf3ff00045eaeec9bdc96a8d31/index.html
+++ b/4b7835b90d570bbf3ff00045eaeec9bdc96a8d31/index.html
@@ -104,6 +104,8 @@ h3 {
 		<div class="panel panel-default">
 			<div class="panel-heading"><h2>Inference</h2></div>
 			<div class="panel-body">
+				<p>The <b>viterbi algorithm</b> is used to compute the most likely state sequence given the feature observations.</p>
+				<hr>
 				<p><b>init_probs</b></p>
 				<p>Likelihood of given class being the starting class.</p>
 				<p><b>trans_probs</b></p>
@@ -112,7 +114,6 @@ h3 {
 				<p>Likelihood of given features for each class.</p>
 				<p><b>length_probs</b></p>
 				<p>Likelihood of any given length for each class, computed from poisson distribution.</p>
-				
 			</div>
 		</div>
 	</div>
