--- a/4b7835b90d570bbf3ff00045eaeec9bdc96a8d31/index.html
+++ b/4b7835b90d570bbf3ff00045eaeec9bdc96a8d31/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Supervised SHMM</title>
+	<title>Supervised HSMM</title>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -61,10 +61,10 @@ h3 {
 <body>
 <div class="container">
 	<div class="head">
-		<h1>Supervised SHMM</h1>
+		<h1>Supervised HSMM</h1>
 	</div>
 	<div class="panel-group">
-		<p>Detailing implementation of Supervised SHMM from <a href="https://github.com/dpfried/action-segmentation"><i>Learning to Segment Actions from Observation and Narration</i></a></p>
+		<p>Detailing implementation of Supervised HSMM from <a href="https://github.com/dpfried/action-segmentation"><i>Learning to Segment Actions from Observation and Narration</i></a></p>
 		<div class="panel panel-default">
 			<div class="panel-heading"><h2>Toy Dataset</h2></div>
 			<div class="panel-body">
